Прими пожалуйста после fix gap list

--- a/src/css/5-my-projects.css
+++ b/src/css/5-my-projects.css
@@ -15,6 +15,7 @@ max-width: 360px;
   margin: 0 auto;
   max-width: 100%;
   box-sizing: border-box;
+  margin-bottom: 40px;
 }
 
 .night-mode .my-projects-title {
@@ -61,6 +62,9 @@ text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+#project-list:not(:last-child) {
   gap: 40px;
 }
 
@@ -190,12 +194,23 @@ text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
 }
 
 #project-list {
+list-style: none;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+#project-list:not(:last-child) {
   gap: 60px;
 }
+
 
   .my-projects-title {
     font-size: 108px;
     line-height: 1.14;
+    margin-bottom: 60px;
   }
 
   .project-title {
@@ -235,13 +250,14 @@ text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
   padding-right: 104px;
 }
 
-#project-list {
+#project-list:not(:last-child) {
   gap: 80px;
 }
 
   .my-projects-title {
     font-size: 108px;
     line-height: 1.14;
+    margin-bottom: 80px;
   }
 
     .project-image {
@@ -259,6 +275,9 @@ text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
     justify-content: space-between;
   }
 
+    .project-btn {
+    
+    }
 
 #load-more {
   margin-top: 92px;
